benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_DivMod_Sub_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_DivMod_Sub.rs
Time: 2025-09-15 20:15:10

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0423]: expected value, found struct `Vec`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Sub_impl.rs:41:15
   |
41 |   let mut v = Vec<char>::new();
   |               ^^^
  --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/alloc/src/vec/mod.rs:409:1
   |
   = note: `Vec` defined here

error[E0423]: expected value, found builtin type `char`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Sub_impl.rs:41:19
   |
41 |   let mut v = Vec<char>::new();
   |                   ^^^^ not a value

error[E0425]: cannot find crate `new` in the list of imported crates
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Sub_impl.rs:41:26
   |
41 |   let mut v = Vec<char>::new();
   |                          ^^^ not found in the list of imported crates

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0423, E0425.
For more information about an error, try `rustc --explain E0423`.

--------------------------------------------------------------------------------

Additional Output:
error[E0423]: expected value, found struct `Vec`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Sub_impl.rs:41:15
   |
41 |   let mut v = Vec<char>::new();
   |               ^^^
  --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/alloc/src/vec/mod.rs:409:1
   |
   = note: `Vec` defined here

error[E0423]: expected value, found builtin type `char`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Sub_impl.rs:41:19
   |
41 |   let mut v = Vec<char>::new();
   |                   ^^^^ not a value

error[E0425]: cannot find crate `new` in the list of imported crates
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Sub_impl.rs:41:26
   |
41 |   let mut v = Vec<char>::new();
   |                          ^^^ not found in the list of imported crates

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0423, E0425.
For more information about an error, try `rustc --explain E0423`.
